fix bugs №3,4,5,10,11 cards, info gap, and text size

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
   text-align: center;
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
+/*.gallery {*/
+/*  display: flex;*/
+/*  flex-wrap: wrap;*/
+/*  flex-direction: row;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*}*/
 
 footer {
     position: sticky;
