--- a/src/components/Image.module.css
+++ b/src/components/Image.module.css
@@ -1,42 +1,46 @@
 .imageContainer {
   position: relative;
-  width: 360px;
+  max-width: 20rem;
+  max-height: 20rem;
+  min-width: 15rem;
   text-align: left;
   margin: 10px;
   overflow: hidden;
 }
 
-
 .image {
-  width: 360px;
-  height: 240px;
+  max-width: available;
   object-fit: contain;
- 
 }
 
 .imageText {
-  height: 50px;
+  height: 15%;
   position: absolute;
-  bottom: 0px;
-  right: 0px;
-  left: 0px;
+  bottom: 0;
+  right: 0;
+  left: 0;
   background-color: rgba(255, 255, 255, 0.9);
   color: rgb(10, 10, 10);
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
   font-size: 0.8rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  line-height: 1px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  justify-items: left;
+  row-gap: 1px;
 }
+
+
+
 
 .imageCross {
   position: absolute;
   height: 20px;
   width: 20px;
-  top: 0px;
-  right: 0px;
+  top: 0;
+  right: 0;
   background-color: rgba(255, 255, 255, 0.9);
   color: rgb(10, 10, 10);
   padding-left: 5px;
